# tally-coding

./: .gitignore  LICENSE  README.md  ROADMAP.md  WEEK-1-COMPLETE.md  pyproject.toml
deploy/: cloudflared-tally.service  tally-orch-gc.service  tally-orch-gc.timer  tally-orch.service
docs/: OPEN-ITEMS.md  SPRINT-10-COMPLETE.md  SPRINT-11-COMPLETE.md  SPRINT-12-COMPLETE.md  SPRINT-13-COMPLETE.md  SPRINT-14-COMPLETE.md  SPRINT-15-COMPLETE.md  SPRINT-16-COMPLETE.md  SPRINT-17-COMPLETE.md  SPRINT-18-COMPLETE.md  SPRINT-19-COMPLETE.md  SPRINT-2-COMPLETE.md  SPRINT-20-COMPLETE.md  SPRINT-21-COMPLETE.md  SPRINT-22-COMPLETE.md  SPRINT-23-COMPLETE.md  SPRINT-24-COMPLETE.md  SPRINT-25-COMPLETE.md  SPRINT-26-COMPLETE.md  SPRINT-27-COMPLETE.md  SPRINT-28-COMPLETE.md  SPRINT-29-COMPLETE.md  SPRINT-3-COMPLETE.md  SPRINT-30-COMPLETE.md  SPRINT-31-COMPLETE.md  SPRINT-32-COMPLETE.md  SPRINT-32.5-COMPLETE.md  SPRINT-33-COMPLETE.md  SPRINT-33-REST-COMPLETE.md  SPRINT-34-COMPLETE.md  SPRINT-35-COMPLETE.md  SPRINT-36-COMPLETE.md  SPRINT-37-COMPLETE.md  SPRINT-38-COMPLETE.md  SPRINT-38.5-COMPLETE.md  SPRINT-39-COMPLETE.md  SPRINT-4-COMPLETE.md  SPRINT-40-COMPLETE.md  SPRINT-41-COMPLETE.md  SPRINT-42-COMPLETE.md  (+24 more)
docs-site/: astro.config.mjs  package-lock.json  package.json
docs/design/: frontend-audit-2026-05-25.md
scripts/: .env.example  add-cloud-key.sh  run.sh  seed-cvm-orchestrator-env.py  tally-agent
services/orchestrator/: Dockerfile  docker-compose.yml  pyproject.toml
services/orchestrator/tally_orchestrator/: architect.py  channels.py  clerk_auth.py  clerk_backend.py  clerk_billing.py  cli.py  cost.py  cost_estimate.py  credentials.py  credits.py  github_push.py  narrator.py  notifications.py  service.py  stripe_billing.py  stripe_direct.py  team_spec_compat.py  worker_pool.py
services/orchestrator/tests/: conftest.py  test_agent_context_inclusion.py  test_alert_hook.py  test_architect_allowlist.py  test_audit_log_export.py  test_audit_log_filters.py  test_audit_log_helpers.py  test_audit_log_instrumented.py  test_audit_log_prune.py  test_audit_log_route.py  test_audit_log_schema.py  test_auto_pause_on_failures.py  test_billing_routes.py  test_channel_archive.py  test_channel_routing.py  test_channels_routes.py  test_clerk_validation.py  test_cost_estimate.py  test_credit_balance.py  test_credit_gates.py  test_credits.py  test_cron_loop.py  test_custom_channels.py  test_dm_channel_route.py  test_escalation_routing_b4.py  test_escalation_to_dm.py  test_message_ws.py  test_messages_routes.py  test_mid_run_cap.py  test_narrator.py  test_notification_rules.py  test_notifications_routes.py  test_permission_middleware.py  test_persistent_agents_crud.py  test_persistent_agents_routes.py  test_persistent_agents_schema.py  test_pool_circuit_breaker.py  test_push_escalation_payload.py  test_schema.py  test_stripe_direct.py  (+17 more)
spike/day1/: .env.example  (+5 more)
tally_coding_app/: CLAUDE.md  README.md  RESULT-day5.md  pubspec.yaml
tally_coding_core/: __init__.py  identity.py  mls.py  tally_workers.py
tests/: RESULT-day3.md  test_identity.py  test_tally_workers.py
(+244 files in other folders)
