[project]
name = "tally-orchestrator"
version = "0.1.0"
description = "HTTP orchestration service: bootstraps an MLS session with a long-lived worker CVM and dispatches tasks over Tally Workers wakes"
license = "BUSL-1.1"
license-files = ["../../LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "stripe>=11.0.0",
    "websockets>=13.0",
    "skytale-sdk",
    "tally-coding-core",
]

[project.scripts]
tally = "tally_orchestrator.cli:main"
tally-orch = "tally_orchestrator.service:main"

[tool.uv.sources]
tally-coding-core = { path = "../..", editable = true }
# Local skytale sdk (master has the PyMlsEngine from PR #470). Falls back to PyPI
# once a release with PyMlsEngine ships.
skytale-sdk = { path = "../../../skytale/sdk", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
